# default

./: .editorconfig  404.html  Bakefile.sh  Cargo.toml  README.md  README.md.jinja  bake  basalt.toml  bpm.toml  choose  choose.sh  convert.sh  fox-default.sh  foxxo.toml  glue-auto.toml  glue.toml  index.html  package.sh  search.html  sitemap.xml
completions/: choose.sh  fox-default.sh
details/: index.html
docs/: details.md  index.md
lib/: do.sh  helper.sh  plumbing.sh  util.sh
pkg/commands/: choose-launch.sh  choose-print.sh  choose-set.sh
pkg/lib/: do.sh  helper.sh
pkg/lib/cmd/: choose.sh
pkg/src/: do.sh  plumbing.sh
search/: search_index.json
src/: categories.rs  cli.rs  config.rs  main.rs  traits.rs  util.rs
src/categories/: git-diff.rs  terminal-emulator.rs
src/categories/git-diff/: colordiff.rs  delta.rs  diff-so-fancy.rs  diffr.rs  difftastic.rs  git-split-diffs.rs
src/categories/terminal-emulator/: alacritty.rs  kitty.rs
