[package]
name = "defaultmgr"
description = "System for choosing default applications, programs, and utilities"
license = "MPL-2.0"
homepage = "https://github.com/hyperupcall/defaultmgr"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
